--- a/style.css
+++ b/style.css
@@ -1,41 +1,87 @@
-h1 {
+h1,h2 {
+    font-weight: bold;
     text-align: center;
+    background-color: bisque;
+    border: 2px solid black;
+
 }
 
-h2 {
+h3{
     text-align: center;
+    font-weight: bold;
 }
 
 body {
-    background-image: url('image.png'); /* ścieżka do pliku */
-    background-size: cover;           /* dopasowanie do ekranu */
-    background-position: center;      /* wyśrodkowanie */
+    background-image: url('moro.jpg'); 
+    background-size: cover;           
+    background-position: center;      
 }
 
-
-
-
-
 .container {
-    display: flex;              /* aktywuje Flexbox */
+    display: flex;              
     padding: 50px;
     align-items: center;
+    
 }
 
 .tekst {
     width: 50%;
     font-size: 18px;
     text-align: left;
+    background-color: antiquewhite;
 }
 
 .zdjecie {
     width: 50%;
-    height: 50%;
     text-align: right;
 }
 
 .zdjecie img {
-    width: 50%;
-    height: 50%;
-    text-align: right
+    width: 80%;
+    height: 80%;
+    text-align: right;
+}
+
+.paragraf {
+    background-color: bisque;
+    border: 2px solid black;
+    margin: 10px;
+}
+
+p {
+    text-align: center;
+    text-wrap: wrap
+}
+
+.p1 {
+    text-align: right;
+    font-size: 25px;
+    font-weight: bold;
+    font-style: italic;
+    text-wrap: wrap;
+    color: white;
+}
+
+.p2 {
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+    text-wrap: wrap;
+    padding: 20px 0 0 0;
+}
+
+.p3 {
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+    text-wrap: wrap;
+    padding: 0 0 20px 0 ;
+}
+
+.p4 {
+    text-align: left;
+    font-size: 25px;
+    font-weight: bold;
+    text-wrap: wrap;
+    color: white;
 }
