--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h3{
 }
 
 body {
-    background-image: url('moro.jpg'); 
+    background-image: url('./images/moro.jpg'); 
     background-size: cover;           
     background-position: center;      
 }
