--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1,h2 {
     font-weight: bold;
     text-align: center;
     background-color: bisque;
-    border: 2px solid black;
+    border: 0.125rem solid black;
 
 }
 
@@ -19,14 +19,14 @@ body {
 
 .container {
     display: flex;              
-    padding: 50px;
+    padding: 3.125rem;
     align-items: center;
     
 }
 
 .tekst {
     width: 50%;
-    font-size: 18px;
+    font-size: 1.125rem;
     text-align: left;
     background-color: antiquewhite;
 }
@@ -44,8 +44,8 @@ body {
 
 .paragraf {
     background-color: bisque;
-    border: 2px solid black;
-    margin: 10px;
+    border: 0.125rem solid black;
+    margin: 0.625rem;
 }
 
 p {
@@ -55,7 +55,7 @@ p {
 
 .p1 {
     text-align: right;
-    font-size: 25px;
+    font-size: 1.5625rem;
     font-weight: bold;
     font-style: italic;
     text-wrap: wrap;
@@ -64,23 +64,23 @@ p {
 
 .p2 {
     text-align: center;
-    font-size: 25px;
+    font-size: 1.5625rem;
     font-weight: bold;
     text-wrap: wrap;
-    padding: 20px 0 0 0;
+    padding: 1.25rem 0 0 0;
 }
 
 .p3 {
     text-align: center;
-    font-size: 25px;
+    font-size: 1.5625rem;
     font-weight: bold;
     text-wrap: wrap;
-    padding: 0 0 20px 0 ;
+    padding: 0 0 1.25rem 0 ;
 }
 
 .p4 {
     text-align: left;
-    font-size: 25px;
+    font-size: 1.5625rem;
     font-weight: bold;
     text-wrap: wrap;
     color: white;
