--- a/style.css
+++ b/style.css
@@ -85,3 +85,9 @@ p {
     text-wrap: wrap;
     color: white;
 }
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+}
