--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 .container {
     display: flex;              
     padding: 3.125rem;
-    align-items: center;
+   
     
 }
 
@@ -86,6 +86,8 @@ p {
     color: white;
 }
 
+
+
 @media (max-width: 768px) {
   .container {
     flex-direction: column;
@@ -138,7 +140,7 @@ p {
 }
 
 .p1 {
-    text-align: right;
+    text-align: center;
     font-size: 1.5625rem;
     font-weight: bold;
     font-style: italic;
