--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 .container {
     display: flex;              
     padding: 3.125rem;
+    flex-direction: row
    
     
 }
@@ -29,11 +30,13 @@ body {
     font-size: 1.125rem;
     text-align: left;
     background-color: antiquewhite;
+    padding: 0 0.625rem 0 0;
 }
 
 .zdjecie {
     width: 50%;
     text-align: right;
+    padding: 0 0 0 0.625rem;
 }
 
 .zdjecie img {
