--- a/style.css
+++ b/style.css
@@ -119,15 +119,18 @@ body {
     width: 100%;
     font-size: 1.125rem;
     background-color: antiquewhite;
+    text-align: center;
 }
 
 .zdjecie {
     width: 100%;
+    text-align: center;
 }
 
 .zdjecie img {
     width: 100%;
     height: 100%;
+    text-align: center;
 }
 
 .paragraf {
