--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h3{
 }
 
 body {
-    background-image: url('./images/moro.jpg'); 
+    background-image: url('./images/moro3.jpg'); 
     background-size: cover;           
     background-position: center;      
 }
