--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 h1,h2 {
     font-weight: bold;
     text-align: center;
-    background-color: rgb(158, 147, 147);
+    background-color: rgb(88, 159, 106);
     border: 0.125rem solid black;
+    border-radius: 10px
 
 }
 
@@ -48,6 +49,7 @@ body {
     background-color: rgb(138, 177, 118);
     border: 0.125rem solid black;
     margin: 0.625rem;
+    border-radius: 10px
 }
 
 p {
