--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     background-color: rgb(138, 177, 118);
     border: 0.125rem solid black;
     margin: 0.625rem;
-    border-radius: 10px
+    border-radius: 10px;
     padding: 1rem; 
     
 }
